--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "type": "project",
     "license": "proprietary",
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=7.2.5",
@@ -17,7 +17,8 @@
         "phpstan/phpdoc-parser": "^1.13",
         "sensio/framework-extra-bundle": "^6.1",
         "setasign/fpdf": "^1.8",
-        "setasign/fpdi": "^2.6",
+        "setasign/fpdi": "*",
+        "smalot/pdfparser": "^2.9",
         "spatie/pdf-to-image": "^1.2",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
