--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     pdf_directory: '%kernel.project_dir%/public/uploads/pdfs'
+    temp_directory: '%kernel.project_dir%/var/tmp'
+
 
 
 services:
