--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,14 +9,15 @@ parameters:
 
 
 
+# config/services.yaml
+
 services:
-    # default configuration for services in *this* file
+    # Autres configurations de service...
+
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
         exclude:
@@ -24,5 +25,5 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\Scheduler\VerifEcheance:
+        tags: [scheduler.provider]
