--- a/.env
+++ b/.env
@@ -31,6 +31,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
  DATABASE_URL="mysql://root:@127.0.0.1:3306/smartrh"
  #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+MAILER_DSN=smtp://smtp.mail.yahoo.com:587?encryption=tls&auth_mode=login&username=cherifmouhamed9242@yahoo.fr&password=atnriuajklcxhczb
+
+
 
 ###> symfony/messenger ###
 # Choose one of the transports below
