--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "phpstan/phpdoc-parser": "^1.13",
         "sensio/framework-extra-bundle": "^6.1",
         "setasign/fpdf": "^1.8",
-        "setasign/fpdi": "*",
-        "smalot/pdfparser": "^2.9",
+        "setasign/fpdi": "^2.6",
+        "smalot/pdfparser": "^2.10",
         "spatie/pdf-to-image": "^1.2",
         "symfony/asset": "5.4.*",
         "symfony/console": "5.4.*",
